objects/vlocity_cmt__DocumentTemplateSection__c.object
<CustomObject>
    <description>Represents a section of a document template. There can be multiple type of sections such as clauses, images, context sections, embedded template sections, signature sections and so on.</description>
    <fields>
        <fullName>vlocity_cmt__ConditionalExpression__c</fullName>
        <label>Conditional Expression</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfSectionConditions__c</fullName>
        <description>Count of section conditions</description>
        <label>Section Conditions</label>
        <summaryForeignKey>vlocity_cmt__DocumentTemplateSectionCondition__c.vlocity_cmt__DocumentTemplateSectionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomClassName__c</fullName>
        <description>Custom class name (if any) attached to this section</description>
        <label>Custom Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayHeaderInline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the section following the section header will be displayed inline</description>
        <label>Display Header Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayHeader__c</fullName>
        <label>Display Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySectionName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display name of the section</description>
        <label>Display Section Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document clause (if any) associated with this section</description>
        <label>Document Clause</label>
        <referenceTo>vlocity_cmt__DocumentClause__c</referenceTo>
        <relationshipLabel>Document Template Sections</relationshipLabel>
        <relationshipName>DocumentTemplate_Sections_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTemplateId__c</fullName>
        <description>Document Template ID</description>
        <label>Document Template</label>
        <referenceTo>vlocity_cmt__DocumentTemplate__c</referenceTo>
        <relationshipLabel>Document Template Sections</relationshipLabel>
        <relationshipName>DocumentTemplate_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmbeddedTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Embedded Tempate (if any) associated with this section</description>
        <label>Embedded Document Template</label>
        <referenceTo>vlocity_cmt__DocumentTemplate__c</referenceTo>
        <relationshipLabel>Document Template Sections (Document Template)</relationshipLabel>
        <relationshipName>Document_Template_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmbeddedTemplateTokenDRBundleName__c</fullName>
        <formula>vlocity_cmt__EmbeddedTemplateId__r.vlocity_cmt__TokenDRBundleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Embedded Template Token DR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsBatchProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate in Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsInNewPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this section needs to start on a new page (applicable to Word document)</description>
        <label>New Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict the section for editing</description>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsWordTableHeaderRepeated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Table Header in Word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemSectionDisplayStyle__c</fullName>
        <description>Display style if this section is an item section</description>
        <label>Item Section Display Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemSectionFontStyle__c</fullName>
        <description>Font style if this section is an item section</description>
        <label>Item Section Font Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Level__c</fullName>
        <description>Level of this section in hierarchy</description>
        <label>Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NeedAutoSectionNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denoted if section numbering is auto generated</description>
        <label>Auto Section Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentSectionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent section identifier</description>
        <label>Parent Template Section</label>
        <referenceTo>vlocity_cmt__DocumentTemplateSection__c</referenceTo>
        <relationshipName>Contract_Template_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResetAutoNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reset the auto numbering</description>
        <label>Reset Auto Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SectionContent__c</fullName>
        <description>Section content stored as HTML or JSON</description>
        <label>Section Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>Section sequence</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SignatureTokens__c</fullName>
        <description>DocuSign signature tokens</description>
        <label>Signature Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Tokens__c</fullName>
        <description>Tokens inserted into this section</description>
        <label>Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Section type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Context</fullName>
                </value>
                <value>
                    <fullName>Clause</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Embedded Template</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Repeating Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Template Section</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>